@@ -3,6 +3,9 @@
  === New features
   * clean and clean_with methods are now aliased to clean! and clean_with!. (Ben Mabey)
 
+=== Bugfixes
+  * check PostgreSQL version >= 8.2 before using TRUNCATE CASCADE (James B. Byrne)
+
 == 0.5.0 2010-02-22 - The CouchPotato Release
 
  === New features
